--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jest": "^27.3.1"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
