--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
     "express": "^4.17.1",
+    "mongodb": "^4.2.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.0-alpha.1",
     "validator": "^13.7.0"
